2025-10-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow any separator before time in date/time value if colon is used, and allow space as separator even if quotation marks are not used
	* Allow use of Z after date for UTC time (without any time specified)
	* Do not allow left over characters after date
	* Fix negative time zone in date and time input

2025-10-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use category and title from existing local variable/function when using "=" for variable/function assignment
	* Fix output of calculate-as-you-type parsed value (division was displayed using negative exponent) for excluded functions
	* Do not write unnecessary (de)activate global objects to local definitions
	* Always include million, thousand, hundred (they are not ambiguous like other large numbers)
	* Fix make distcheck

2025-10-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Move erg/gram from equivalent to absorbed dose category
	* If last character is a digit, include both letters and numerals in matched word for completion
	* Fix reference names not used for reference of base units in some cases causing failure to load 13 units with Russian translation
	* Make astronomical unit symbol case insensitive and use lower-case letters by default ("au")

2025-10-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculate with interval/uncertainty in where expression even if exact mode
	* Fix display of "calculate as you type" and "save config" options, and remove duplicate "save mode" on Windows, in mode list
	* Update names for Loschmidt, Molary volume of ideal gas, and Sackur tetrode constants to improve consistency
	* Update value of HiggsBoson, quark_c, and quark_t constants
	* Add StandardGravity_unit name
	* Minor adjustment to Fine-Structure and Rydberg constants to more precisely reflect CODATA values for derived constants
	* Use current mode for display of value, place units and uncertanity on same line, for variables in qalc
