@@ -1,3 +1,8 @@
+2025-10-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Improve speed when performing many multiple calculations read from file (by a factor of about 100 for simple calculations)
+	* Increase responsiveness by decreasing the length of sleep periods (from 10 to 1 ms) while waiting
+
 2025-10-08 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Allow any separator before time in date/time value if colon is used, and allow space as separator even if quotation marks are not used
